add default VM option --add-opens=java.base/sun.nio.fs=ALL-UNNAMED